refactor(home): add brigadier tab completion, boundary height checks, and async disconnect race protection